alignment issue in add progress

--- a/src/app/modules/technical-station/components/candidate-detail-modal/candidate-detail-modal.component.css
+++ b/src/app/modules/technical-station/components/candidate-detail-modal/candidate-detail-modal.component.css
@@ -71,7 +71,7 @@
     border-radius: 2px;
     height: 30px;
     background-color: #FFFF;
-    width: 56vw;
+    width: 97%;
 }
 
 .blue {
@@ -205,7 +205,7 @@
     border: 1px solid rgb(207, 205, 205);
     border-radius: 2px;
     background-color: #FFFF;
-    width: 56vw;
+    width: 97%;
 }
 
 .attachment {
